--- a/.hintrc
+++ b/.hintrc
@@ -22,6 +22,12 @@
       {
         "marquee": "off"
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
     ]
   }
 }
